# rosbag2

ros2bag/ros2bag/verb/: record.py
rosbag2/: package.xml
rosbag2_compression/: CMakeLists.txt
rosbag2_compression/include/rosbag2_compression/: sequential_compression_reader.hpp
rosbag2_compression/src/rosbag2_compression/: sequential_compression_reader.cpp  sequential_compression_writer.cpp
rosbag2_compression_zstd/: CMakeLists.txt  package.xml
rosbag2_compression_zstd/include/rosbag2_compression_zstd/: visibility_control.hpp  zstd_compressor.hpp  zstd_decompressor.hpp
rosbag2_compression_zstd/src/rosbag2_compression_zstd/: compression_utils.hpp  logging.hpp  zstd_compressor.cpp  zstd_decompressor.cpp
rosbag2_converter_default_plugins/: CMakeLists.txt
rosbag2_cpp/: CMakeLists.txt
rosbag2_cpp/src/rosbag2_cpp/: serialization_format_converter_factory.cpp
rosbag2_cpp/src/rosbag2_cpp/readers/: sequential_reader.cpp
rosbag2_storage/: CMakeLists.txt  package.xml
rosbag2_storage/include/rosbag2_storage/: metadata_io.hpp
rosbag2_storage/src/rosbag2_storage/: metadata_io.cpp  storage_factory.cpp
rosbag2_storage/src/rosbag2_storage/impl/: storage_factory_impl.hpp
rosbag2_storage_default_plugins/: CMakeLists.txt
rosbag2_storage_default_plugins/include/rosbag2_storage_default_plugins/sqlite/: sqlite_storage.hpp
rosbag2_storage_default_plugins/src/rosbag2_storage_default_plugins/sqlite/: sqlite_wrapper.cpp
rosbag2_storage_default_plugins/test/rosbag2_storage_default_plugins/sqlite/: test_sqlite_storage.cpp
rosbag2_tests/: CMakeLists.txt
rosbag2_tests/test/rosbag2_tests/: test_rosbag2_record_end_to_end.cpp
rosbag2_transport/: CMakeLists.txt  package.xml
rosbag2_transport/config/: somatic.yaml
rosbag2_transport/include/rosbag2_transport/: bag_info.hh  bcr_msgs_to_events.hh  msg_to_event.hh  msg_to_event_base.hh  parse_options.hh  record_options.hpp  rosbag2_transport.hpp
rosbag2_transport/src/: somatic_rosbag_node.cc
rosbag2_transport/src/rosbag2_transport/: bcr_msgs_to_events.cc  bcr_parser.cpp  bcr_parser.hpp  player.cpp  player.hpp  recorder.cpp  recorder.hpp  rosbag2_node.cpp  rosbag2_node.hpp  rosbag2_transport.cpp  rosbag2_transport_python.cpp
rosbag2_transport/test/rosbag2_transport/: test_record.cpp  test_record_all.cpp  test_record_all_no_discovery.cpp
